Add the overriding of model definitions by users
